# backend_books_app

./: .env.exemple  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
core/api/: urls.py
core/api/v1/: urls.py
core/api/v1/accounts/: handlers.py  utils.py
core/api/v1/autocomplete/: handlers.py  shemas.py
core/api/v1/books/: chemas.py  handlers.py
core/api/v1/comments/: handlers.py  schemas.py
core/api/v1/likes/: handlers.py
core/api/v1/user_books/: handlers.py  schema.py
core/applications/accounts/: dto.py  service.py  use_case.py
core/domain/accounts/: entity.py  exeptions.py  repository.py  service.py  value_objects.py
core/domain/books/: entity.py  repository.py
core/infra/django_apps/accounts/: admin.py  api.py  apps.py  models.py  repository.py  schema.py
core/infra/django_apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0004_rename_data_joined_user_date_joined.py  0005_alter_user_options.py
core/infra/django_apps/accounts/service/: service.py
core/infra/django_apps/books/: admin.py  apps.py  models.py  schema.py
core/infra/django_apps/books/handlers/: api_book.py  api_user.py  api_user_book.py
core/infra/django_apps/books/migrations/: 0001_initial.py  0002_alter_bookmodels_categories_and_more.py  0003_alter_book_categories.py  0004_rename_book_bookmodels.py
core/infra/django_apps/books/tests/: base.py  test_autocomplite.py  test_book.py  test_user_book.py
core/infra/django_apps/comments/: admin.py  api.py  apps.py  models.py  schema.py
core/infra/django_apps/comments/migrations/: 0001_initial.py  0002_commentmodels_parent.py
core/infra/django_apps/likes/: apps.py  models.py
core/infra/django_apps/likes/migrations/: 0001_initial.py  0002_alter_likemodel_book.py  0003_remove_likemodel_likes_likem_user_id_6ef063_idx_and_more.py
core/infra/django_apps/templates/emails/: password_reset.html  verify_email.html
core/infra/django_apps/utils/: decorators.py
core/project/: settings.py  urls.py
project/: .env.exemple
project/accounts/: admin.py  api.py  apps.py  jwt_admin.py  models.py  schema.py  urls.py  utils.py  views.py
project/accounts/migrations/: 0003_user_is_email_verified_alter_user_is_active.py
project/books/: admin.py  api.py  models.py  schema.py  serializers.py  test.py  views.py
project/books/handlers/: api_book.py  api_user.py  api_user_book.py
project/books/migrations/: 0001_initial.py  0002_alter_book_options_alter_userbook_options_and_more.py  0003_alter_book_categories.py  0004_rename_book_bookmodels.py
project/books/tests/: base.py  test_autocomplite.py  test_book.py  test_user_book.py
project/books/urls/: books.py  user_books.py
project/comments/: admin.py  api.py  models.py  schema.py
project/comments/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
project/templates/emails/: verify_email.html
project/users/: models.py  serializers.py  tokens.py  urls.py  utils.py  views.py
project/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_is_email_verified_alter_user_is_active.py  0004_rename_data_joined_user_date_joined.py
project/utils/: decorators.py
