[project]
name = "book-android-app"
version = "0.1.0"
description = ""
authors = [
    {name = "antonnagulin",email = "nagulin03@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
